pimcore-jetpakk/kubernetes/example/dev/php-fpm/ingress-v1.17.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pimcore-website
  labels:
    app: pimcore-website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 350M
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: pimcore-dev.m2.krankikom.de
    http:
      paths:
      - path: /.*(jpg|webp|js|\.css|png|jpeg|svg|woff2)$
        backend:
          serviceName: pimcore-varnish
          servicePort: 80
      - path: /.*
        backend:
          serviceName: pimcore-website-fpm
          servicePort: 80
  tls:
  - hosts:
    - pimcore-dev.m2.krankikom.de
    secretName: pimcore-website-tls-cert
